# uploadFile-Django

./: .gitignore  README.md  pyproject.toml
images/: models.py  serilaizer.py  urls.py  views.py
server/: urls.py
